--- a/android/variables.gradle
+++ b/android/variables.gradle
@@ -14,4 +14,5 @@ ext {
     androidxEspressoCoreVersion = '3.5.1'
     cordovaAndroidVersion = '10.1.1'
     kotlinVersion = '1.9.25'
+    androidxBrowserVersion = '1.8.0'
 }
