--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/tekinozgurr/Unihub_Mobile#readme",
   "dependencies": {
     "@capacitor/android": "^8.1.0",
-    "@capacitor/app": "^8.0.0",
+    "@capacitor/app": "^8.0.1",
+    "@capacitor/browser": "^8.0.1",
     "@capacitor/cli": "^8.1.0",
     "@capacitor/core": "^8.1.0",
     "@capacitor/filesystem": "^8.1.0",
